graphchan_frontend/check_output.txt
warning: `/Users/max/.cargo/config` is deprecated in favor of `config.toml`
note: if you need to support cargo 1.38 or earlier, you can symlink `config` to `config.toml`
    Checking graphchan_frontend v0.1.0 (/Users/max/Code/OrbWeaver/graphchan_frontend)
error[E0428]: the name `identity` is defined multiple times
 --> graphchan_frontend/src/app/ui/mod.rs:8:1
  |
6 | pub mod identity;
  | ----------------- previous definition of the module `identity` here
7 | pub mod thread;
8 | pub mod identity;
  | ^^^^^^^^^^^^^^^^^ `identity` redefined here
  |
  = note: `identity` must be defined only once in the type namespace of this module

warning: unused import: `crate::app::state::IdentityState`
 --> graphchan_frontend/src/app/ui/identity.rs:4:5
  |
4 | use crate::app::state::IdentityState;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0308]: mismatched types
   --> graphchan_frontend/src/app/ui/drawer.rs:97:25
    |
 94 |                     crate::app::tasks::upload_avatar(
    |                     -------------------------------- arguments to this function are incorrect
...
 97 |                         std::path::PathBuf::from(path),
    |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `String`, found `PathBuf`
    |
note: function defined here
   --> graphchan_frontend/src/app/tasks.rs:156:8
    |
156 | pub fn upload_avatar(client: ApiClient, tx: Sender<AppMessage>, path: String) {
    |        ^^^^^^^^^^^^^                                            ------------

error[E0599]: no variant or associated item named `Identity` found for enum `ViewState` in the current scope
  --> graphchan_frontend/src/app/ui/identity.rs:17:43
   |
17 |             crate::app::state::ViewState::Identity(state) => state,
   |                                           ^^^^^^^^ variant or associated item not found in `ViewState`
   |
  ::: graphchan_frontend/src/app/state.rs:24:1
   |
24 | pub enum ViewState {
   | ------------------ variant or associated item `Identity` not found for this enum

error[E0308]: mismatched types
  --> graphchan_frontend/src/app/ui/identity.rs:41:72
   |
41 | ...                   next_action = Some(Action::DownloadAvatar(avatar_id.clone(), url));
   |                                          ---------------------- ^^^^^^^^^^^^^^^^^ expected `String`, found `&str`
   |                                          |
   |                                          arguments to this enum variant are incorrect
   |
note: tuple variant defined here
  --> graphchan_frontend/src/app/ui/identity.rs:9:9
   |
 9 |         DownloadAvatar(String, String),
   |         ^^^^^^^^^^^^^^
help: try using a conversion method
   |
41 -                              next_action = Some(Action::DownloadAvatar(avatar_id.clone(), url));
41 +                              next_action = Some(Action::DownloadAvatar(avatar_id.to_string(), url));
   |

error[E0599]: no variant or associated item named `Identity` found for enum `ViewState` in the current scope
   --> graphchan_frontend/src/app/ui/identity.rs:108:54
    |
108 |                 if let crate::app::state::ViewState::Identity(state) = &mut app.view {
    |                                                      ^^^^^^^^ variant or associated item not found in `ViewState`
    |
   ::: graphchan_frontend/src/app/state.rs:24:1
    |
 24 | pub enum ViewState {
    | ------------------ variant or associated item `Identity` not found for this enum

error[E0599]: no method named `render_file_attachment` found for mutable reference `&mut GraphchanApp` in the current scope
   --> graphchan_frontend/src/app/ui/thread.rs:213:50
    |
213 | ...                   self.render_file_attachment(ui, file, &api_base);
    |                            ^^^^^^^^^^^^^^^^^^^^^^ method not found in `&mut GraphchanApp`

error[E0599]: no variant or associated item named `Identity` found for enum `ViewState` in the current scope
   --> graphchan_frontend/src/app/mod.rs:318:24
    |
318 |             ViewState::Identity(_) => "identity",
    |                        ^^^^^^^^ variant or associated item not found in `ViewState`
    |
   ::: graphchan_frontend/src/app/state.rs:24:1
    |
 24 | pub enum ViewState {
    | ------------------ variant or associated item `Identity` not found for this enum

error[E0599]: no method named `render_image_viewers` found for mutable reference `&mut GraphchanApp` in the current scope
   --> graphchan_frontend/src/app/mod.rs:393:14
    |
393 |         self.render_image_viewers(ctx);
    |              ^^^^^^^^^^^^^^^^^^^^ method not found in `&mut GraphchanApp`

warning: unused variable: `scale`
  --> graphchan_frontend/src/app/ui/graph.rs:77:82
   |
77 | fn step_graph_layout(nodes: &mut HashMap<String, GraphNode>, posts: &[PostView], scale: f32, thread_id: &str, repulsion_force: f32) {
   |                                                                                  ^^^^^
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default
help: if this is intentional, prefix it with an underscore
   |
77 | fn step_graph_layout(nodes: &mut HashMap<String, GraphNode>, posts: &[PostView], _scale: f32, thread_id: &str, repulsion_force: f32) {
   |                                                                                  +
help: you might have meant to pattern match on the similarly named constant `TOP_MARGIN`
   |
77 - fn step_graph_layout(nodes: &mut HashMap<String, GraphNode>, posts: &[PostView], scale: f32, thread_id: &str, repulsion_force: f32) {
77 + fn step_graph_layout(nodes: &mut HashMap<String, GraphNode>, posts: &[PostView], app::ui::chronological::TOP_MARGIN: f32, thread_id: &str, repulsion_force: f32) {
   |

warning: unused variable: `state`
   --> graphchan_frontend/src/app/ui/graph.rs:520:42
    |
520 | fn render_node_header(ui: &mut egui::Ui, state: &mut ThreadState, post: &PostView, zoom: f32) {
    |                                          ^^^^^ help: if this is intentional, prefix it with an underscore: `_state`

Some errors have detailed explanations: E0308, E0428, E0599.
For more information about an error, try `rustc --explain E0308`.
warning: `graphchan_frontend` (lib) generated 3 warnings
error: could not compile `graphchan_frontend` (lib) due to 11 previous errors; 3 warnings emitted
